--- a/src/UserList.css
+++ b/src/UserList.css
@@ -2,7 +2,7 @@
     background: #f4f4f4;
     padding: 15px;
     margin: 10px;
-    width: 50%;
+    width: 60%;
     border-radius: 10px;
     display: flex;
     align-items: center;
@@ -15,3 +15,10 @@
     transform: scale(1.05);
     box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
   }
+  h1 {
+    font-size: 2rem;
+    color: #ee0a0a;
+    margin-bottom: 20px;
+  }
+
+  
